quick fix on FunctionPotentialPanel